packages/cashc/test/compiler/InvalidSymbolTypeError/function_name_as_class.cash
contract Test() {
    return {
        hello() {
            require(new min(0, 1) == 0);
        }
    }
}
